tests/failing/string_triple.db
const const name = '''Lu'''!
const const name = "'Lu'"!